[Doctolib] - Adding new appointment categories
"scolaire" / "vaccination"

--- a/config.json
+++ b/config.json
@@ -149,7 +149,9 @@
                     "moderna",
                     "astra",
                     "astrazeneca",
-                    "pré-consultation"
+                    "pré-consultation",
+                    "vaccination",
+                    "scolaire"
                 ]
             },
             "center_scraper": {
