--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "scrape_on_n_days": 28,
+    "max_dose_in_classic_jsons": 1,
     "base_urls": {
         "gitlab_public_path": "https://vitemadose.gitlab.io/vitemadose/",
         "github_public_path": "https://raw.githubusercontent.com/CovidTrackerFr/vitemadose/data-auto/"
@@ -142,18 +143,6 @@
                         "vaccine": "Moderna"
                     }
                 },
-                "appointment_reason": [
-                    "1 ere injection",
-                    "1 ère injection",
-                    "1er injection",
-                    "1ere dose",
-                    "1ere injection",
-                    "1ère injection",
-                    "1re injection",
-                    "vaccination",
-                    "Vaccin COVID-19",
-                    "injection unique"
-                ],
                 "appointment_category": [
                     "18 à 54",
                     "55 ans",
@@ -271,29 +260,239 @@
                 "appointment_skill": [
                     "Centre de vaccination COVID-19"
                 ],
-                "appointment_reason": [
-                    "1 er inj",
-                    "1 ere inj",
-                    "1 ère inj",
-                    "1ere dose",
-                    "1ère dose",
-                    "1ere inj",
-                    "1ère inj",
-                    "covid19 - vaccination",
+                "first_dose_reasons": [
+                    "INJ1",
+                    "1re",
+                    "1INJ",
+                    "INJ 1",
+                    "PFZ 1",
+                    "PFZ1",
+                    "1ère",
+                    "1ème",
+                    "1er",
+                    "1 ère",
+                    "1ière",
+                    "1 er",
+                    "Inj 1",
                     "inj 1",
-                    "inj. 1",
+                    "Inj1",
                     "inj1",
+                    "inj. 1",
+                    "Inj. 1",
+                    "prem",
+                    "Prem",
+                    "dose 1",
+                    "unique",
+                    "UNIQUE",
+                    "Unique",
+                    "1 seule",
+                    "injection 1",
                     "1 injection",
-                    "première dose",
+                    "Injection 1",
+                    "Injection sans indication de rappel",
+                    "antécédent",
+                    "ATCD",
+                    "1ERE",
+                    "ayant eu",
+                    "Mono",
+                    "1 INJ",
                     "1° injection",
-                    "première injection",
-                    "mono-injection",
-                    "mono injection",
-                    "mono-dose",
-                    "mono dose",
-                    "injection unique",
-                    "première injection",
-                    "vaccination ouverte"
+                    "Janssen",
+                    "Prémière",
+                    "sans indication de rappel",
+                    "johnson",
+                    "1ére INJ",
+                    "1ére",
+                    "Une seule"
+                ],
+                "second_dose_reason": [
+                    "INJ2",
+                    "2INJ",
+                    "INJ 2",
+                    "PFZ 2",
+                    "PFZ2",
+                    "PF2",
+                    "2e",
+                    "2ème",
+                    "2eme",
+                    "2ieme",
+                    "2ième",
+                    "2 ème",
+                    "2 -ème",
+                    "2 eme",
+                    "2 em",
+                    "2me",
+                    "2nd",
+                    "2 nd",
+                    "2NDE",
+                    "2de",
+                    "Inj 2",
+                    "inj 2",
+                    "Inj2",
+                    "inj. 2",
+                    "Inj. 2",
+                    "inj2",
+                    "deux",
+                    "Deux",
+                    "dose 2",
+                    "injection 2",
+                    "2 injection",
+                    "Injection 2",
+                    "Seconde",
+                    "seconde",
+                    "ayant reçu",
+                    "suite à une 1ère",
+                    "J21",
+                    "après Primo AZ",
+                    "2 éme",
+                    "2 INJ",
+                    "2° injection",
+                    "2EME",
+                    "2éme"
+                ],
+                "dose1_filter": [
+                    "INJ1",
+                    "1re",
+                    "1INJ",
+                    "INJ 1",
+                    "PFZ 1",
+                    "PFZ1",
+                    "1ère",
+                    "1ème",
+                    "1er",
+                    "1 ère",
+                    "1ière",
+                    "1 er",
+                    "Inj 1",
+                    "inj 1",
+                    "Inj1",
+                    "inj1",
+                    "inj. 1",
+                    "Inj. 1",
+                    "prem",
+                    "Prem",
+                    "dose 1",
+                    "unique",
+                    "UNIQUE",
+                    "Unique",
+                    "1 seule",
+                    "injection 1",
+                    "1 injection",
+                    "Injection 1",
+                    "Injection sans indication de rappel",
+                    "antécédent",
+                    "ATCD",
+                    "1ERE",
+                    "ayant eu",
+                    "Mono",
+                    "1 INJ",
+                    "1° injection",
+                    "Janssen",
+                    "Prémière",
+                    "sans indication de rappel",
+                    "johnson",
+                    "1ére INJ",
+                    "1ére",
+                    "Une seule"
+                ],
+                "dose2_filter": [
+                    "INJ2",
+                    "2INJ",
+                    "INJ 2",
+                    "PFZ 2",
+                    "PFZ2",
+                    "PF2",
+                    "2e",
+                    "2ème",
+                    "2eme",
+                    "2ieme",
+                    "2ième",
+                    "2 ème",
+                    "2 -ème",
+                    "2 eme",
+                    "2 em",
+                    "2me",
+                    "2nd",
+                    "2 nd",
+                    "2NDE",
+                    "2de",
+                    "Inj 2",
+                    "inj 2",
+                    "Inj2",
+                    "inj. 2",
+                    "Inj. 2",
+                    "inj2",
+                    "deux",
+                    "Deux",
+                    "dose 2",
+                    "injection 2",
+                    "2 injection",
+                    "Injection 2",
+                    "Seconde",
+                    "seconde",
+                    "ayant reçu",
+                    "suite à une 1ère",
+                    "J21",
+                    "après Primo AZ",
+                    "2 éme",
+                    "2 INJ",
+                    "2° injection",
+                    "2EME",
+                    "2éme"
+                ],
+                "rappel_filter": [
+                    "INJ3",
+                    "3e",
+                    "3ème",
+                    "3eme",
+                    "3EME",
+                    "3ieme",
+                    "3ième",
+                    "3 ème",
+                    "3 eme",
+                    "Inj 3",
+                    "inj 3",
+                    "Inj3",
+                    "inj. 3",
+                    "Inj. 3",
+                    "inj3",
+                    "trois",
+                    "Trois",
+                    "dose 3",
+                    "injection 3",
+                    "Injection 3",
+                    "Troisième",
+                    "troisième",
+                    "RAPPEL",
+                    "Rappel",
+                    "rappel",
+                    "3 à 6 mois",
+                    "6 mois",
+                    "INJ4",
+                    "4e",
+                    "4ème",
+                    "4eme",
+                    "4EME",
+                    "4ieme",
+                    "4ième",
+                    "4 ème",
+                    "4 eme",
+                    "Inj 4",
+                    "inj 4",
+                    "Inj4",
+                    "inj. 4",
+                    "Inj. 4",
+                    "inj4",
+                    "dose 4",
+                    "injection 4",
+                    "Injection 4"
+                ],
+                "immuno_filter": [
+                    "IMM",
+                    "imm",
+                    "Imm",
+                    "greffés",
+                    "pathologie justifiant"
                 ]
             },
             "center_scraper": {
@@ -370,11 +569,6 @@
                     "SECOND": 2,
                     "BOOSTER": 3
                 }
-            },
-            "filters": {
-                "injection_type": [
-                    "FIRST"
-                ]
             }
         },
         "mapharma": {
