Doctolib - patch urls

--- a/config.json
+++ b/config.json
@@ -83,7 +83,7 @@
                 "https://partners.doctolib.fr",
                 "https://www.doctolib.fr"
             ],
-            "build_url": "https://www.doctolib.fr{url_path}?pid={place_id}",
+            "build_url": "https://www.doctolib.fr/vaccination-covid-19/{url_path}?pid={place_id}",
             "api": {
                 "booking": "https://partners.doctolib.fr/booking/{centre}.json",
                 "slots": "https://partners.doctolib.fr/availabilities.json?start_date={start_date}&visit_motive_ids={motive_id}&agenda_ids={agenda_ids_q}&insurance_sector=public&practice_ids={practice_ids_q}&destroy_temporary=true&limit={limit}",
