--- a/.github/workflows/trigger_gitlab_scrape.yml
+++ b/.github/workflows/trigger_gitlab_scrape.yml
@@ -17,7 +17,7 @@ jobs:
       
       - name: "Call gitlab api"
         run: |
-           curl -X POST -F token=${{secrets.GITLAB_TRIGGER_KEY}} -F ref=main \ https://gitlab.com/api/v4/projects/27510169/trigger/pipeline
+           curl -X POST -F token=${{secrets.GITLAB_TRIGGER_KEY}} -F ref=main https://gitlab.com/api/v4/projects/27510169/trigger/pipeline
           
           
       
