--- a/.github/workflows/trigger_gitlab_scrape.yml
+++ b/.github/workflows/trigger_gitlab_scrape.yml
@@ -12,7 +12,10 @@ jobs:
   trigger_scrape:
     name: "Gitlab scrape trigger"
     runs-on: "ubuntu-20.04"
-    steps:
+    steps:    
+      - uses: "actions/checkout@v2"
+        with:
+          token: ${{secrets.PAT_GRZ}}
       
       - name: "Call gitlab api"
         run: |
