--- a/.github/workflows/gitlab_trigger_scrape.yml
+++ b/.github/workflows/gitlab_trigger_scrape.yml
@@ -3,7 +3,10 @@ name: Gitlab trigger scrape
 
 on:
   schedule:
-    - cron: "*/5 * * * *"
+  - cron: "*/3 * * * *" # Every 20 mins on fridays
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 
 jobs:
