[3e doses] - Adaptation tags à la demande du front

--- a/config.json
+++ b/config.json
@@ -557,7 +557,9 @@
                     "test",
                     "antigenique",
                     "antigénique",
-                    "pcr"
+                    "pcr",
+                    "antigrippale",
+                    "grippe"
                 ],
                 "business_days": {
                     "Lundi": "MONDAY",
