[Scraping Issue] - Desactivation temporaire keldoc

--- a/config.json
+++ b/config.json
@@ -227,7 +227,7 @@
             }
         },
         "keldoc": {
-            "enabled": true,
+            "enabled": false,
             "timeout": 45,
             "recognized_urls": [
                 "https://vaccination-covid.keldoc.com",
