keldoc - dose enfant

--- a/config.json
+++ b/config.json
@@ -493,6 +493,9 @@
                     "Imm",
                     "greffés",
                     "pathologie justifiant"
+                ],
+                "kid_first_dose_filter": [
+                    "11"
                 ]
             },
             "center_scraper": {
