--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "scrape_on_n_days": 60,
+    "scrape_on_n_days": 28,
     "scrape_only_atlas_centers": false,
     "base_urls": {
         "gitlab_public_path": "https://vitemadose.gitlab.io/vitemadose/",
@@ -38,7 +38,8 @@
     "vaccines": {
         "Pfizer-BioNTech": [
             "pfizer",
-            "biontech"
+            "biontech",
+            "pfizer-biontech"
         ],
         "Moderna": [
             "moderna"
