--- a/config.json
+++ b/config.json
@@ -675,6 +675,10 @@
                     "Permière injection COVID",
                     "Première injection vaccinale COVID",
                     "Rendez-vous de première vaccination Covid",
+                    "Deuxieme injection vaccinale COVID",
+                    "Deuxième injection vaccinale COVID",
+                    "Troisieme injection vaccinale COVID"
+                    "Troisième injection vaccinale COVID"
                     "1ere vaccination astra",
                     "Injection vaccinale COVID-19 - Janssen",
                     "Injection monodose Janssen",
