--- a/config.json
+++ b/config.json
@@ -677,8 +677,8 @@
                     "Rendez-vous de première vaccination Covid",
                     "Deuxieme injection vaccinale COVID",
                     "Deuxième injection vaccinale COVID",
-                    "Troisieme injection vaccinale COVID"
-                    "Troisième injection vaccinale COVID"
+                    "Troisieme injection vaccinale COVID",
+                    "Troisième injection vaccinale COVID",
                     "1ere vaccination astra",
                     "Injection vaccinale COVID-19 - Janssen",
                     "Injection monodose Janssen",
