switch off doctolib for now

--- a/config.json
+++ b/config.json
@@ -82,7 +82,7 @@
     ],
     "platforms": {
         "doctolib": {
-            "enabled": true,
+            "enabled": false,
             "timeout": 10,
             "recognized_urls": [
                 "https://partners.doctolib.fr",
