Revert "switch off doctolib for now"
This reverts commit 34b9a3fb5344a62910be7da072127a41b578ef0f.

--- a/config.json
+++ b/config.json
@@ -82,7 +82,7 @@
     ],
     "platforms": {
         "doctolib": {
-            "enabled": false,
+            "enabled": true,
             "timeout": 10,
             "recognized_urls": [
                 "https://partners.doctolib.fr",
